// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should have same snapshot when hidden 1`] = `
<div
  className="sc-jzJRlG bZoLnt"
  onClick={[MockFunction]}
>
  <div
    className="sc-cSHVUG cEKVwh"
    onClick={[Function]}
  >
    <span
      className="sc-htpNat dwRXzK"
      color="#444"
      size="20px"
    >
      Character Details
    </span>
    <div
      className="sc-kAzzGY kXVJzU"
    />
    <footer
      className="sc-chPdSV jAYBc"
    >
      <button
        className="sc-bdVaJa etHrZN"
        color="teal"
        data-testid="button"
        onClick={[Function]}
      >
        Close
      </button>
    </footer>
  </div>
</div>
`;

exports[`Modal when rendering visible should have same snapshot 1`] = `
<div
  className="sc-jzJRlG ikDJvP"
  onClick={[MockFunction]}
>
  <div
    className="sc-cSHVUG cEKVwh"
    onClick={[Function]}
  >
    <span
      className="sc-htpNat dwRXzK"
      color="#444"
      size="20px"
    >
      Character Details
    </span>
    <div
      className="sc-kAzzGY kXVJzU"
    >
      <span
        className="sc-htpNat jZIyuc"
        color="#444"
        size="16px"
      >
        Sample
      </span>
    </div>
    <footer
      className="sc-chPdSV jAYBc"
    >
      <button
        className="sc-bdVaJa etHrZN"
        color="teal"
        data-testid="button"
        onClick={[Function]}
      >
        Close
      </button>
    </footer>
  </div>
</div>
`;
